# a_bevy_game

./: Cargo.toml  build.rs  net_id.db
assets/tilesets/: test.ldtk  test2.ldtk
bind/src/: odin_lib.odin
scripts/: main.py
sprites/: fruits.ron  platforms.ron
src/: camera.rs  constants.rs  game_over.rs  lib.rs  main copy.rsj  main.rs  main.rso'  menu.rs  movement.rs  player.rs  ui.rs
src/actions/: mod.rs
src/binds/: mod.rs
src/builder/: mod.rs
src/bullet/: mod.rs
src/collectables/: mod.rs
src/draw_vector_graphics/: gallary3d.rs  gallery2d.rs  mod.rs
src/draw_with_lyon/: mod.rs
src/effect/: mod.rs
src/manager/: mod.rs
src/mob/: mod.rs  movement.rs
src/mobs/: mod.rs
src/modifier/: mod.rs
src/network/: client.rs  mod.rs  server.rs  tcp.rs  test_data.rs
src/plattforms/: deteactable.rs  mod.rs
src/sprite_loader/: mod.rs  tileset.rs
src/state/: mod.rs
src/utils/: default_plugin.rs  mod.rs
