[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["mobile"]

[profile.dev.package."*"]
opt-level = 1

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic_linking",
]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx/android-game-activity, since those are covered in `mobile`
[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",
] }
bevy_kira_audio = { version = "0.21" }
bevy_asset_loader = "0.22"
rand = { version = "0.8.3" }
webbrowser = { version = "1", features = ["hardened"] }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
bevy_time = "0.15.0"
# bevy_rapier2d = "0.27.0"
glam = "0.29.2"
itertools = "0.13.0"
bumpalo = { version = "3.16.0", features = ["std"] }
bevy_color = "0.15.1"
avian2d = { git = "https://github.com/Jondolf/avian", version = "*" }
bevy_simple_text_input = "0.10.0"
bevy_egui = "0.31.1"
bevy_ui = "0.15.0"
generational-arena = "=0.2.9"
libloading = "0.8.6"
lazy_static = "1.5.0"
bevy_prototype_lyon = { git = "https://github.com/jpx40/bevy_prototype_lyon", version = "0.13.0" }
ron = "0.8.1"
serde = { version = "1.0.215", features = ["derive"] }
anyhow = "1.0.94"
ldtk2 = { git = "https://github.com/jpx40/ldtk2-rs", version = "0.8.0" }
bevy_two_entities = "0.3.0"
# avian2d = {git="https://github.com/Jondolf/avian"}
bevy_ecs_tilemap ={git="https://github.com/rparrett/bevy_ecs_tilemap", branch = "bevy-0.15"}

bevy_ecs_ldtk = {git="https://github.com/neocturne/bevy_ecs_ldtk", branch = "bevy-0.15"}
default-args = "1.0.0"
bevy_app = "0.15.0"
bevy_core = "0.15.0"
bevy_input = "0.15.0"
bevy_hanabi = "0.14.0"
numtraits = "0.0.1"
lyon = "1.0.1"
lyon_algorithms = "1.0.5"
bitflags = "2.6.0"
enontekio = "0.4.0"
ndarray = "0.16.1"
bevy_vector_shapes = { git = "https://github.com/james-j-obrien/bevy_vector_shapes", version = "0.9.2" }

[build-dependencies]
embed-resource = "1"
